Uzupełnienie plików zadań i projektów końcowych

--- a/py10flask/templates/main_menu_dziala.html
+++ b/py10flask/templates/main_menu_dziala.html
@@ -180,7 +180,7 @@
 
     <body>
         <div>
-            <a href="{{ url_for('home') }}">•  home  •  page  •</a>
+            <a href="http://127.0.0.1:5000/" >•  h o m e  •  p a g e  •</a>
             <hr class="textarea"><br/>
             <h2>ACCOUNTANT v3.0</h2><br/>
             <h3 class="h3">(accounting and warehouse program)</h3>
@@ -219,7 +219,7 @@
                               id="sal2"></textarea><br/>
                 </label>
 
-                <form class="accordion-content" action="/main/" method="GET">
+                <form class="accordion-content" action="/main" method="GET">
                     <label class="h4" for="button1">
                         <button onclick="getValue(label='sal2');"
                                 class="button"
@@ -268,7 +268,7 @@
                     <br/>
                 </label>
 
-                <form class="accordion-content" action="/main/" method="GET">
+                <form class="accordion-content" action="/main" method="GET">
                     <label class="h4" for="button2">
                         <button onclick="getValue(label='sal2');"
                                 class="button"
@@ -318,7 +318,7 @@
                     <br/>
                 </label>
 
-                <form class="accordion-content" action="/main/" method="GET">
+                <form class="accordion-content" action="/main" method="GET">
                     <label class="h4" for="button3">
                         <button onclick="getValue(label='sale2');"
                                 class="button"
@@ -360,7 +360,7 @@
                     <br/>
                 </label>
 
-                <form class="accordion-content" action="/main/" method="GET">
+                <form class="accordion-content" action="/main" method="GET">
                     <label class="h4" for="button4">
                         <button onclick="getValue('view2');"
                                 class="button"
@@ -396,7 +396,7 @@
                     <br/>
                 </label>
 
-                <form class="accordion-content" action="/main/" method="GET">
+                <form class="accordion-content" action="/main" method="GET">
                     <label class="h4" for="button5">
                         <button onclick="getValue('ware1');"
                                 class="button"
